@@ -13,9 +13,10 @@ DIST python-gentoo-patches-3.7.9-r1.tar.xz 15664 BLAKE2B 271b95a52f4ba83c1aee6f6
 DIST python-gentoo-patches-3.7.9.tar.xz 10588 BLAKE2B f60c8500671e7e3977412474c838905846e0609a7fdac787f2c6a8bfa53c887dcfd3466c5276772ffb8c20205e8b3f207f7d148c04524f19d095964b519da62d SHA512 11f411eb2d59fd45fbd80bdb1d1a83d413770779244045006942c5cb84837cba606673bcde102ae03b1d4579f526b551c93a64d39dba530b4584ba8dd8e9f13e
 EBUILD python-2.7.18-r100.ebuild 12236 BLAKE2B 3a9c60b953bbf33e762ea29c207dab3c6dea3d6fffc6c388fcf2c726bd3745a514d8c069f8e2853a137bf30c193806422ef46c624e58e0dc4b1a875bb28c39d3 SHA512 b075978f095aa91a964eb5e8ae63076bf956d17c07384769bfee8ac30306242537a27eb90f9c9ed2b70aea7fc8766f948ebcb682fa2b4c6c8e5c34ee1a724ee7
 EBUILD python-2.7.18-r101.ebuild 12396 BLAKE2B 96a8b4be8e3e70a8b68efe2733943076f9fb6f76245e30e311b5d7df1761b334ab452ac6b0560e826daaa846b7a5b01a1bd641d6b0ae0fe0d2b9784d0cbf0a23 SHA512 11ac9f2f2fcd36293332cecfd20de3e7b05fb142ce50e6d27f2de9c282aeccf272749da2809ec0e9c3830e7c4185483200ebc4a468274e5b33e8d7e20cf8da97
+EBUILD python-2.7.18-r102.ebuild 12549 BLAKE2B b5e748f3baf913c22eec6c9e0d88757ba94b7e92d9c40682712dddbf61022114ef04b5673b47ca2c50b1d8d19f82c7e1117086255bfa7c644970ac97c044f365 SHA512 75755f0a0a77142f70c9d106390df5e26f641f79cc38664be2f5e9ad8692725dcbbb341ab79bc0a2eb67cbc5bfedfb8c6a3ae06a33ea7b77947aa5b77b4cdffd
 EBUILD python-3.7.7-r2.ebuild 9982 BLAKE2B 7e8f9bdb4c11d673b9d626a66dc3babece5470f2df471cfb299ce54f5af35f441ed38c51c6a11c3746e3d751170198e5be9c17cb442a0c5d17dc14935e888cbf SHA512 fbff584b2e278cbcb87819d08c6e7f4175b1c83ae28cf79cddb70a9efc996a25303c76ee95ce927e8e392ee7e02c207a2709f0e5f5b46dfd015a5337f8084d3e
 EBUILD python-3.7.8-r2.ebuild 9902 BLAKE2B b9628bfacda6887dfbbf49f8ade319e6e75421e9b2ae3d0f0163670889eedf7d4b566ce3602566e906a2f23b4f50f060953d63004f4466306d0f79a86d64e51c SHA512 fc8c6ca42c0cd78d86799bb19627e31fd2ef1e31bce157e529e04f2e916e5db9bb47e9d87962215a866d3b24ec103600fda993681180f3117b0e36b7688293b5
 EBUILD python-3.7.9-r1.ebuild 9992 BLAKE2B bb4b26f9ec770d64dfa600267ef3ead9dc874dda49b56a9540ef5f4a152991c2bc73297fc93fe6527b0eda488937c994997cb27d4b17f86378d47cf522a55f76 SHA512 e3bf81e589764b79d8adcf26f0ba02395bb329cbd7422ba043303d376daf4796d60935cfc1471419f6022862a020c2ec103406c3f7935e2e495f4f5839ff9519
 EBUILD python-3.7.9.ebuild 9905 BLAKE2B 35fdaeb7d63e83b5dc64db14f8588aa86dfbddd52a5d855f7996b4c31e51cf0ab17c81809f1d69b1e4ef65c318826fb27f2ac7596c319d4c2b9061973250df44 SHA512 1d58fa66bb3ab5eddb1fc740a2344d4dbca0d19ea1dccef14087110c54aaf06d8d1eaf0a6b96271a0bf8f2472afa01f47650acc1f299fee6c4aad5820b8aa723
-MISC ChangeLog 1066 BLAKE2B 646472f46c367799696dc4aba6ff8a7621b5a244dfc0ede208e82df925455ce72cf3ab172a0d4b2b9a9dffd3de184d21f8999e8a7c4a72ae456c8ab45048bd1f SHA512 e02b2c548dc39702c7fa00f0598f32cb3f1c2b2d353a6478fecd0039d457cb86b596b4c73cacdd8ca1c1ba922666cd9629071ac64dce1c11546237be74963a2f
+MISC ChangeLog 1182 BLAKE2B af8654e52efd3688ffd50b0243c86e8ad901fd637e4fb530036a67a095a7e304f2136a14a31b87d13b5bf3b1d6d6b7a66bcaa442b556214b345918ae02af4dbc SHA512 22bd7702901e2c76c50a805cb7afa25a9e961829cc7f83fd3df517191f1a3af374ffaf71f8e9a924e3b8e8176aeab2990abd43c1723ef0debd285607c469cb05
 MISC metadata.xml 819 BLAKE2B 120c7c65d77488e726c5a0f4aa19469867ea6900e747169fae2f9cf8f14ec2936089d5edfe1935ce610bec26387273e261b1cc4b023680c8c4b229f2141a7223 SHA512 08f45707e5490067a21951b9d37c8ae67064ab67cccc5b8d8c204eab8d4a004fb910627b62989c67b849b89d301618f8f8f7996e99e1ef5bab38a239c49c124d
